--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="container main-container">
+    <div class="container main-container" style="background:#200054;">
         <div class="row">
           
             <div class="col-sm-4" style="background: #200054">
